tests/fail/nightly/raw_string.stderr
error: more placeholders than types provided
 --> tests/fail/nightly/raw_string.rs:2:32
  |
2 |     sscanf::scanf!("hi", r"asdf{}asdf");
  |                                ^^

error: unrecognized format option.
       Hint: Regex format options must start and end with '/'
 --> tests/fail/nightly/raw_string.rs:3:34
  |
3 |     sscanf::scanf!("hi", r"asdf{:bob}asdf", usize);
  |                                  ^^^

error: unrecognized format option.
       Hint: Regex format options must start and end with '/'
 --> tests/fail/nightly/raw_string.rs:4:39
  |
4 |     sscanf::scanf!("hi", r"asdf{usize:bob}asdf");
  |                                       ^^^

error: more placeholders than types provided
 --> tests/fail/nightly/raw_string.rs:5:34
  |
5 |     sscanf::scanf!("hi", r##"asdf{}asdf"##);
  |                                  ^^

error: unrecognized format option.
       Hint: Regex format options must start and end with '/'
 --> tests/fail/nightly/raw_string.rs:6:36
  |
6 |     sscanf::scanf!("hi", r##"asdf{:bob}asdf"##, usize);
  |                                    ^^^

error: unrecognized format option.
       Hint: Regex format options must start and end with '/'
 --> tests/fail/nightly/raw_string.rs:7:41
  |
7 |     sscanf::scanf!("hi", r##"asdf{usize:bob}asdf"##);
  |                                         ^^^
